<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="#cccccc"
    android:orientation="vertical" >

    <!-- Thumbnail ImageButton, play button overlay ImageView, and title EditText. -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/kamcord_rounded_rect"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="9dp" >

            <ImageButton
                android:id="@+id/thumbnailButton"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:background="#333333"
                android:contentDescription="@string/kamcordWatchVideo"
                android:scaleType="centerCrop" />

            <ImageView
                android:id="@+id/thumbnailPlayOverlay"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/kamcordWatchVideo"
                android:scaleType="centerCrop"
                android:src="@drawable/kamcord_play_button" />

            <ProgressBar
                android:id="@+id/videoProgressBar"
                style="@android:style/Widget.ProgressBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:visibility="gone" />
        </RelativeLayout>

        <!-- Dummy View to prevent EditText from receiving initial focus. -->

        <View
            android:layout_width="0px"
            android:layout_height="0px"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:background="@null"
            android:hint="@string/kamcordWriteATitle"
            android:inputType="textMultiLine|textCapSentences"
            android:minHeight="80dp"
            android:nextFocusLeft="@id/description"
            android:nextFocusUp="@id/description"
            android:textColor="#000" >
        </EditText>
    </LinearLayout>

    <!-- Social platform grid. -->

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/kamcord_rounded_rect" >

        <!-- Top left social platform. -->

        <LinearLayout
            android:id="@+id/share_0_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/share_0_0_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:adjustViewBounds="true"
                android:focusable="false"
                android:padding="8dp"
                android:scaleType="centerInside" />

            <TextView
                android:id="@+id/share_0_0_text"
                android:layout_width="80sp"
                android:layout_height="match_parent"
                android:focusable="false"
                android:gravity="left|center"
                android:textColor="#000000"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Vertical divider. -->

        <View
            android:id="@+id/vertical_divider"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/share_1_0"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:layout_toRightOf="@+id/share_0_0"
            android:background="#FFAAAAAA" />

        <!-- Top right social platform. -->

        <LinearLayout
            android:id="@+id/share_0_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/vertical_divider"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/share_0_1_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:adjustViewBounds="true"
                android:focusable="false"
                android:padding="8dp"
                android:scaleType="centerInside" />

            <TextView
                android:id="@+id/share_0_1_text"
                android:layout_width="80sp"
                android:layout_height="match_parent"
                android:focusable="false"
                android:gravity="left|center"
                android:textColor="#000000"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Horizontal divider. -->

        <View
            android:id="@+id/horizontal_divider"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/share_0_1"
            android:layout_below="@+id/share_0_0"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:background="#FFAAAAAA"
            android:orientation="vertical" />

        <!-- Bottom left social platform. -->

        <LinearLayout
            android:id="@+id/share_1_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/horizontal_divider"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/share_1_0_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:adjustViewBounds="true"
                android:focusable="false"
                android:padding="8dp"
                android:scaleType="centerInside" />

            <TextView
                android:id="@+id/share_1_0_text"
                android:layout_width="80sp"
                android:layout_height="match_parent"
                android:focusable="false"
                android:gravity="left|center"
                android:textColor="#000000"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Bottom right social platform. -->

        <LinearLayout
            android:id="@+id/share_1_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/horizontal_divider"
            android:layout_toRightOf="@+id/vertical_divider"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/share_1_1_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:adjustViewBounds="true"
                android:focusable="false"
                android:padding="8dp"
                android:scaleType="centerInside" />

            <TextView
                android:id="@+id/share_1_1_text"
                android:layout_width="80sp"
                android:layout_height="match_parent"
                android:focusable="false"
                android:gravity="left|center"
                android:textColor="#000000"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

    <!-- Share button and upload status/progress indicators. -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/kamcord_share_button"
            android:text="@string/kamcordShareReplay"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/progressText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="4dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#000000"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="@android:style/Widget.ProgressBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/retry"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_horizontal"
                android:background="@null"
                android:contentDescription="@string/kamcordRetry"
                android:scaleType="centerInside"
                android:src="@drawable/kamcord_retry"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <!-- Powered by Kamcord. -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:focusable="false"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/kamcordPoweredByKamcord"
        android:textColor="#666666"
        android:textSize="12sp" />

</LinearLayout>